# conflores

./: .gitignore  CNAME  Cargo.toml  Gemfile  Justfile  LICENSE  README.md  _config.yml  deno.json  eleventy.config.js  flake.nix  gemset.nix  index.md  index.vto  soupault.toml  tags.vto
.github/workflows/: deploy.yaml
_includes/: blog.html  footer.html  head.html  nav.html
_layouts/: page.html  post.html
_posts/: 2024-06-02-an-introduction.md  2024-06-18-wpt-tests.md  2024-07-08-halfway-point.md  2024-09-20-reviving-devtools-in-servo.md
assets/blog/: 01_intro.md  02_wpt.md  03_halfway_point.md  test.md
assets/css/: modern_normalize.css  style.css
assets/lib/: inline_css.js
assets/script/: bad-apple.js  checkboxes.js
assets/style/: bad-apple.css  base.css  blog.css  components.css  main.css  modern_normalize.css  (+3 more)
blog/: 2024-06-18-wpt-tests.md  2024-07-08-halfway-point.md  2024-09-20-reviving-devtools-in-servo.md  2025-11-19-joining-the-indie-web.md  2025-11-27-interop-and-mathml.md  2025-11-30-interop-and-mathml.md  blog.json
config/: plugins.js  post.js  pre.js
data/: robots.json  site.json
feeds/: atom.njk  web-platform.njk
include/: blog.vto  footer.vto  header.vto  main.vto  posts.vto
pages/: 404.md  404.vto  about.md  bad-apple-mathml.vto  index.vto  robots.vto  sitemap.vto  tags.vto  test.vto
plugins/: append-date.lua  atom.lua  inline-style.lua  post-header.lua  set-metadata.lua  tag-photos.lua
site/: index.html  style.css
src/: lib.rs  main.rs  routes.rs
templates/: base.html  footer.html  header.html  main.html  nav.html
(+24 files in other folders)
